Fix scrolling/height issues on smaller devices

--- a/arches/app/media/css/components/search/_related-resources.scss
+++ b/arches/app/media/css/components/search/_related-resources.scss
@@ -2,6 +2,14 @@
 	.workbench-card-sidepanel {
 		@include break-at(mobile-max) {
 			width: calc(100% - 75px);
+			overflow-y: auto;
+    		overflow-x: hidden;
+		}
+	}
+
+	.workbench-card-sidepanel-header-container {
+		@include break-at(mobile-max) {
+			width: 100%;
 		}
 	}
 }
